--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="docs/CV.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/homee.png" alt="">
+            <img src="images/home.png" alt="">
         </div>
     </section>
 
