--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact<span> Me</span></h2>
       
-        <form action="https://formspree.io/f/xbjenkql"  method="POST">
+        <form action="https://formspree.io/f/myyqyzwv"  method="POST">
           <div class="input-box">
             <input type="text" name="name" placeholder="Full Name">
             <input type="email" name="_replyto" placeholder="Email Address">
