--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <a href="docs/CV.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/home.png" alt="">
+            <img src="images/h0me.png" alt="">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/home.png" alt="">
+            <img src="images/h0me.png" alt="">
         </div>
 
         <div class="about-content">
@@ -251,14 +251,6 @@
                     <a href="https://github.com/M0stafapri/Data-Retrieval-System.git"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio/06.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Dining Philosophers</h4>
-                    <p>Dining-Philosophers Algorithm using Multithreaded.</p>
-                    <a href="https://github.com/M0stafapri/Data-Retrieval-System.git"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
 
         </div>
     </section>
@@ -290,7 +282,7 @@
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>innovati - Copyright &copy; 2023 All Rights Reserved.</p>
+            <p>innovati - Copyright &copy; 2025 All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
