--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <a href="docs/CV.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/h0me.png" alt="">
+            <img src="images/hme.png" alt="">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/h0me.png" alt="">
+            <img src="images/hme.png" alt="">
         </div>
 
         <div class="about-content">
