--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=m0stafarihan5@gmail.com"><i
                         class="bx bxl-gmail"></i></a>
             </div>
-            <a href="docs/CV.pdf" class="btn">Download CV</a>
+            <a href="docs/MustafaResume.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="images/hme.png" alt="">
